[package]
name = "market"
version = "0.21.0"
authors = ["Justin Simerly <jsim2010@gmail.com>"]
description = "Infrastructure for producers and consumers"
license = "MIT"
repository = "https://github.com/jsim2010/market"
readme = "README.md"
keywords = ["producer", "consumer"]
categories = ["rust-patterns"]
edition = "2018"

[dependencies]
conventus = "0.2.0"
crossbeam-channel = "0.5.0"
fehler = "1.0.0"
log = "0.4.0"
market_derive = { path = "derive", version = "0.1.0" }
parse-display = "0.1.1"
thiserror = "1.0.0"
