[package]
name = "market"
version = "0.27.1"
authors = ["Justin Simerly <jsim2010@gmail.com>"]
description = "Infrastructure for producers and consumers"
license = "MIT"
repository = "https://github.com/jsim2010/market"
readme = "README.md"
keywords = ["producer", "consumer"]
categories = ["rust-patterns"]
edition = "2018"

[dependencies]
fehler = "1.0.0"
market_derive = { path = "derive", version = "0.1.0" }
thiserror = "1.0.0"
