[package]
name = "market"
version = "0.28.0"
authors = ["Justin Simerly <jsim2010@gmail.com>"]
description = "Infrastructure for producers and consumers"
license = "MIT"
repository = "https://github.com/jsim2010/market"
readme = "README.md"
keywords = ["producer", "consumer"]
categories = ["rust-patterns"]
edition = "2018"

[dependencies]
fehler = "1.0.0"
never = { version = "0.1.0", default-features = false }

[dev-dependencies]
syn = { version = "1.0.73", features = ["extra-traits"] }

[features]
unstable-doc-cfg = []
std = ["never/std"]

[package.metadata.docs.rs]
rustc-args = ["--all-features"]
